--- a/config/templates/application.yml.erb
+++ b/config/templates/application.yml.erb
@@ -1,10 +1,10 @@
 defaults: &defaults
 
   # Set root URL to Peatio platform. It will be used to fetch variables which is trading interface driven by.
-  PLATFORM_ROOT_URL: http://peatio.tech
+  PLATFORM_ROOT_URL: http://api.wb2.rightsnetwork.net/
 
   # Set URL where you wan to redirect from trading ui menubar
-  FRONTEND_ROOT_URL: http://peatio.tech
+  FRONTEND_ROOT_URL: http://api.wb2.rightsnetwork.net/
 
   # Set to "true" to disable access via unsecured HTTP, send HSTS headers and use secure cookies.
   FORCE_SECURE_CONNECTION: false
